--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Защитники Отечества на карте Татарстана</title>
 
     <!-- CSS -->
-    <link href="css/style.css" rel="stylesheet" type="text/css" />
+    <link href="/project_for_ZMK/css/style.css" rel="stylesheet" type="text/css" />
     <!-- CSS-Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -18,12 +18,12 @@
         <nav>
             <ul>
                 <div class="nav-img">
-                    <a class="nav-item-img" href="D:/Project/index.html">
-                        <img class="nav-item-img_img" src="D:/Project/image/main-zmk.png" width="8%" alt="Змк"/>
+                    <a class="nav-item-img" href="/project_for_ZMK/index.html">
+                        <img class="nav-item-img_img" src="/project_for_ZMK/image/main-zmk.png" width="8%" alt="Змк"/>
                     </a>            
                 </div>
                 <li>
-                    <a class="nav-item-1" href="/D:/Project/index.html">
+                    <a class="nav-item-1" href="/project_for_ZMK/index.html">
                         Главная
                     </a>
                 </li>
@@ -41,17 +41,17 @@
                       <li><a class="dropdown-item" href="#">Верхнеуслонцев</a></li>
                       <li><a class="dropdown-item" href="#">Высокогорский район</a></li>
                       <li><a class="dropdown-item" href="#">Дрожжановский район</a></li>
-                      <li><a class="dropdown-item" href="/D:/Project/vov/elabuga_vov.html">Елабуга</a></li>
-                      <li><a class="dropdown-item" href="/D:/Project/vov/zelenodolsk_vov.html">Зеленодольск</a></li>
-                      <li><a class="dropdown-item" href="/D:/Project/vov/Leninogorsk_vov.html">Лениногорск</a></li>
+                      <li><a class="dropdown-item" href="/project_for_ZMK/vov/elabuga_vov.html">Елабуга</a></li>
+                      <li><a class="dropdown-item" href="/project_for_ZMK/vov/zelenodolsk_vov.html">Зеленодольск</a></li>
+                      <li><a class="dropdown-item" href="/project_for_ZMK/vov/Leninogorsk_vov.html">Лениногорск</a></li>
                       <li><a class="dropdown-item" href="#">Менделевский район</a></li>
                       <li><a class="dropdown-item" href="#">Мензилинск</a></li>
                       <li><a class="dropdown-item" href="#">Набережные челны</a></li>
                       <li><a class="dropdown-item" href="#">Новошешминск</a></li>
-                      <li><a class="dropdown-item" href="/D:/Project/vov/Pestrechinsky_vov.html">Пестречинский район</a></li>
+                      <li><a class="dropdown-item" href="/project_for_ZMK/vov/Pestrechinsky_vov.html">Пестречинский район</a></li>
                       <li><a class="dropdown-item" href="#">Спасский район</a></li>
-                      <li><a class="dropdown-item" href="/D:/Project/vov/Tetyushsky_vov.html">Тетюшский район</a></li>
-                      <li><a class="dropdown-item" href="/D:/Project/vov/Tukayevsky_vov.html">Тукаевский район</a></li>
+                      <li><a class="dropdown-item" href="/project_for_ZMK/vov/Tetyushsky_vov.html">Тетюшский район</a></li>
+                      <li><a class="dropdown-item" href="/project_for_ZMK/vov/Tukayevsky_vov.html">Тукаевский район</a></li>
                       <li><a class="dropdown-item" href="#">Уруссу</a></li>
                       <li><a class="dropdown-item" href="#">Ютазинский</a></li>
                     </ul>
@@ -70,17 +70,17 @@
                         <li><a class="dropdown-item" href="#">Верхнеуслонцев</a></li>
                         <li><a class="dropdown-item" href="#">Высокогорский район</a></li>
                         <li><a class="dropdown-item" href="#">Дрожжановский район</a></li>
-                        <li><a class="dropdown-item" href="/D:/Project/svo/elabuga_svo.html">Елабуга</a></li>
-                        <li><a class="dropdown-item" href="/D:/Project/svo/zelenodolsk_svo.html">Зеленодольск</a></li>
-                        <li><a class="dropdown-item" href="/D:/Project/svo/Leninogorsk_svo.html">Лениногорск</a></li>
+                        <li><a class="dropdown-item" href="/project_for_ZMK/svo/elabuga_svo.html">Елабуга</a></li>
+                        <li><a class="dropdown-item" href="/project_for_ZMK/svo/zelenodolsk_svo.html">Зеленодольск</a></li>
+                        <li><a class="dropdown-item" href="/project_for_ZMK/svo/Leninogorsk_svo.html">Лениногорск</a></li>
                         <li><a class="dropdown-item" href="#">Менделевский район</a></li>
                         <li><a class="dropdown-item" href="#">Мензилинск</a></li>
                         <li><a class="dropdown-item" href="#">Набережные челны</a></li>
                         <li><a class="dropdown-item" href="#">Новошешминск</a></li>
-                        <li><a class="dropdown-item" href="/D:/Project/svo/Pestrechinsky_svo.html">Пестречинский район</a></li>
+                        <li><a class="dropdown-item" href="/project_for_ZMK/svo/Pestrechinsky_svo.html">Пестречинский район</a></li>
                         <li><a class="dropdown-item" href="#">Спасский район</a></li>
-                        <li><a class="dropdown-item" href="/D:/Project/svo/Tetyushsky_svo.html">Тетюшский район</a></li>
-                        <li><a class="dropdown-item" href="/D:/Project/svo/Tukaev_svo.html">Тукаевский район</a></li>
+                        <li><a class="dropdown-item" href="/project_for_ZMK/svo/Tetyushsky_svo.html">Тетюшский район</a></li>
+                        <li><a class="dropdown-item" href="/project_for_ZMK/svo/Tukaev_svo.html">Тукаевский район</a></li>
                         <li><a class="dropdown-item" href="#">Уруссу</a></li>
                         <li><a class="dropdown-item" href="#">Ютазинский</a></li>
                     </ul>
@@ -100,17 +100,17 @@
                         <li><a class="dropdown-item" href="#">Верхнеуслонцев</a></li>
                         <li><a class="dropdown-item" href="#">Высокогорский район</a></li>
                         <li><a class="dropdown-item" href="#">Дрожжановский район</a></li>
-                        <li><a class="dropdown-item" href="/D:/Project/mp/elabuga_mp.html">Елабуга</a></li>
-                        <li><a class="dropdown-item" href="/D:/Project/mp/zelenodolsk_mp.html">Зеленодольск</a></li>
-                        <li><a class="dropdown-item" href="/D:/Project/mp/Leninogorsk_mp.html">Лениногорск</a></li>
+                        <li><a class="dropdown-item" href="/project_for_ZMK/mp/elabuga_mp.html">Елабуга</a></li>
+                        <li><a class="dropdown-item" href="/project_for_ZMK/mp/zelenodolsk_mp.html">Зеленодольск</a></li>
+                        <li><a class="dropdown-item" href="/project_for_ZMK/mp/Leninogorsk_mp.html">Лениногорск</a></li>
                         <li><a class="dropdown-item" href="#">Менделевский район</a></li>
                         <li><a class="dropdown-item" href="#">Мензилинск</a></li>
                         <li><a class="dropdown-item" href="#">Набережные челны</a></li>
                         <li><a class="dropdown-item" href="#">Новошешминск</a></li>
-                        <li><a class="dropdown-item" href="/D:/Project/mp/Pestrechinsky_mp.html">Пестречинский район</a></li>
+                        <li><a class="dropdown-item" href="/project_for_ZMK/mp/Pestrechinsky_mp.html">Пестречинский район</a></li>
                         <li><a class="dropdown-item" href="#">Спасский район</a></li>
-                        <li><a class="dropdown-item" href="/D:/Project/mp/Tetyushsky_mp.html">Тетюшский район</a></li>
-                        <li><a class="dropdown-item" href="/D:/Project/mp/Tukaev_mp.html">Тукаевский район</a></li>
+                        <li><a class="dropdown-item" href="/project_for_ZMK/mp/Tetyushsky_mp.html">Тетюшский район</a></li>
+                        <li><a class="dropdown-item" href="/project_for_ZMK/mp/Tukaev_mp.html">Тукаевский район</a></li>
                         <li><a class="dropdown-item" href="#">Уруссу</a></li>
                         <li><a class="dropdown-item" href="#">Ютазинский</a></li>
                     </ul>
@@ -122,7 +122,7 @@
 
     <main>
         <div class="video-background">
-            <video src="video/kuieo7xgyef1xpmzqzxfbzi59g2xzdr3.mp4" data-msrc="video/kuieo7xgyef1xpmzqzxfbzi59g2xzdr3.mp4" data-dsrc="video/kuieo7xgyef1xpmzqzxfbzi59g2xzdr3.mp4" playsinline="" webkit-playsinline="" preload="metadata" muted="" loop="" autoplay=""></video>
+            <video src="/project_for_ZMK/video/kuieo7xgyef1xpmzqzxfbzi59g2xzdr3.mp4" data-msrc="/project_for_ZMK/video/kuieo7xgyef1xpmzqzxfbzi59g2xzdr3.mp4" data-dsrc="/project_for_ZMK/video/kuieo7xgyef1xpmzqzxfbzi59g2xzdr3.mp4" playsinline="" webkit-playsinline="" preload="metadata" muted="" loop="" autoplay=""></video>
         </div>
  
     </main>
